Frog jumps to correct coordinates following the correct curve

--- a/src/Components/FrogTroll/FrogTroll.scss
+++ b/src/Components/FrogTroll/FrogTroll.scss
@@ -45,13 +45,3 @@
     z-index:2000;
     border-radius: 80%;
 }
-
-#dot2{
-    width:1em;
-    height:1em;
-    // background-color: transparent;
-    background-color: pink;
-    // position: absolute;
-    z-index:2000;
-    border-radius: 80%;
-}
